Added ability to configure check interval

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -38,6 +38,7 @@
         <a href="/" class="brand">Price Checker</a>
         <a href="/">Dashboard</a>
         <a href="/add">Add Product</a>
+        <a href="/settings">Settings</a>
     </nav>
     <div class="container">
         {% with messages = get_flashed_messages(with_categories=true) %}
